# storage/api-docs/api-docs.json
@@ -156,7 +156,35 @@
                 "operationId": "Register",
                 "requestBody": {
                     "content": {
-                        "multipart/form-data": {},
+                        "multipart/form-data": {
+                            "schema": {
+                                "required": [
+                                    "user_surname",
+                                    "user_email",
+                                    "user_password",
+                                    "user_password_confirmation"
+                                ],
+                                "properties": {
+                                    "user_surname": {
+                                        "type": "text",
+                                        "example": "beachcomber"
+                                    },
+                                    "user_email": {
+                                        "type": "email",
+                                        "example": "example@beachcomber.com"
+                                    },
+                                    "user_password": {
+                                        "type": "password",
+                                        "example": "beachcomber2022"
+                                    },
+                                    "user_password_confirmation": {
+                                        "type": "password",
+                                        "example": "beachcomber2022"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        },
                         "application/json": {
                             "schema": {}
                         }
@@ -164,34 +192,125 @@
                 },
                 "responses": {
                     "201": {
-                        "description": "Register Successfully",
+                        "description": "User created successfully",
                         "content": {
                             "application/json": {
-                                "schema": {}
-                            }
-                        }
-                    },
-                    "200": {
-                        "description": "Register Successfully",
-                        "content": {
-                            "application/json": {
-                                "schema": {}
-                            }
-                        }
-                    },
-                    "422": {
-                        "description": "Unprocessable Entity",
-                        "content": {
-                            "application/json": {
-                                "schema": {}
+                                "schema": {
+                                    "properties": {
+                                        "successMsg": {
+                                            "type": "string",
+                                            "example": "string"
+                                        },
+                                        "data": {
+                                            "properties": {
+                                                "user_id": {
+                                                    "type": "integer",
+                                                    "example": "number"
+                                                },
+                                                "user_type_id": {
+                                                    "type": "integer",
+                                                    "example": "number"
+                                                },
+                                                "user_group_id": {
+                                                    "type": "integer",
+                                                    "example": "number"
+                                                },
+                                                "user_surname": {
+                                                    "type": "string",
+                                                    "example": "string"
+                                                },
+                                                "user_othername": {
+                                                    "type": "string",
+                                                    "example": "string"
+                                                },
+                                                "user_email": {
+                                                    "type": "string",
+                                                    "example": "string"
+                                                },
+                                                "user_jobtitle": {
+                                                    "type": "string",
+                                                    "example": "string"
+                                                },
+                                                "user_phone": {
+                                                    "type": "string",
+                                                    "example": "string"
+                                                },
+                                                "user_name": {
+                                                    "type": "string",
+                                                    "example": "string"
+                                                },
+                                                "active": {
+                                                    "type": "integer",
+                                                    "example": "number"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
                             }
                         }
                     },
                     "400": {
-                        "description": "Bad request"
+                        "description": "Bad request",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "errNo": {
+                                            "type": "integer",
+                                            "example": "number"
+                                        },
+                                        "errMsg": {
+                                            "type": "string",
+                                            "example": "string"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "errNo": {
+                                            "type": "integer",
+                                            "example": "number"
+                                        },
+                                        "errMsg": {
+                                            "type": "string",
+                                            "example": "string"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
                     },
                     "404": {
-                        "description": "Resource Not Found"
+                        "description": "Resource Not Found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "errNo": {
+                                            "type": "integer",
+                                            "example": "number"
+                                        },
+                                        "errMsg": {
+                                            "type": "string",
+                                            "example": "string"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
                     }
                 }
             }
@@ -541,6 +660,10 @@
         {
             "name": "Authentification",
             "description": "API Endpoints of Authentification"
+        },
+        {
+            "name": "User",
+            "description": "API Endpoints of User"
         }
     ],
     "components": {
